# pymepix-viewer

./: .gitignore  LICENSE.md  PEP1.md  README.md  pyproject.toml  setup.py
lib/pymepix/: packetprocessor.py  packetsampler.py  timepixacq.py
lib/pymepix/processing/: centroiding.py
pymepix/: main.py  setup.py
pymepix/pymepix/: pymepix.py  timepixdevice.py
pymepix/pymepix/SPIDR/: spidrcmds.py  spidrcontroller.py  spidrdevice.py
pymepix/pymepix/config/: defaultconfig.py  sophyconfig.py  timepixconfig.py
pymepix/pymepix/processing/: acquisition.py  basepipeline.py  datatypes.py  flashid.py  packetprocessor.py  udpsampler.py
pymepix/pymepix/util/: storage.py
pymepixviewer/: main.py  setup.py
pymepixviewer/core/: datatypes.py  filesaver.py
pymepixviewer/dialogs/: postprocessing.py
pymepixviewer/dialogs/ui/: postprocessing.ui  postprocessingui.py
pymepixviewer/panels/: acqconfig.py  blobview.py  daqconfig.py  daqcontrol.py  editpixelmaskpanel.py  processingconfig.py  regionsofinterest.py  roidialog.py  timeofflight.py  timepix_setup_histogram.py  timepixsetupplotspanel.py  viewerconfig.py
pymepixviewer/panels/ui/: acqconfig.ui  acqconfigui.py  blobview.ui  blobviewui.py  daqconfig.ui  daqconfigui.py  daqcontrol.ui  daqcontrolui.py  pixelmapedit.ui  pixelmapeditui.py  processingconfig.ui  processingconfigui.py  roidialogui.py  timeofflightpanelui.py  timepixsetupplotspanel.ui  timepixsetupplotspanelui.py  viewerconfigui.py
pymepixviewer/pymepixviewer/: main.py
pymepixviewer/pymepixviewer/core/: filesaver.py
pymepixviewer/pymepixviewer/panels/: daqconfig.py
pymepixviewer/pymepixviewer/ui/: main.ui  mainui.py
pymepixviewer/ui/: main.ui  mainui.py
tools/blob_converter/: main.py
tools/pymepixdaq/: main_window.py
tools/pymepixdaq/panels/: blobview.py  (+1 more)
tools/timepixdaq/: mainwindow.py
(+9 files in other folders)
